Fix: Need old password to change password (#6)
