# src/BookApi.Domain/DTOs/Commands/UserCommandDTOs.cs
@@ -2,4 +2,4 @@ namespace BookApi.Domain.DTOs.Commands;
 
 public record UserNameCommandDTO(string UserName);
 
-public record UserPasswordCommandDTO(string Password);
+public record UserPasswordCommandDTO(string OldPassword, string NewPassword);
